# hyperliquid-zorro-plugin

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Strategy/: HyperliquidSmokeTest.c
docs/: Code review.md  REFACTOR_PLAN.md  TESTING_CHECKLIST.md
docs/archive/: COMPLETED_ISSUES.md  CURRENT_SPRINT.md  KNOWN_ISSUES.md  PREVIOUS_SPRINT.md  REFACTOR_CHECKLIST_v2.md
docs/dev/: ADDING_FEATURES.md  ARCHITECTURE.md  DATA_FLOWS.md  GETTING_STARTED.md  GOTCHAS.md  TESTING.md
docs/hyperliquid-api/: 00-api-overview.md  01-notation.md  02-asset-ids.md  03-tick-and-lot-size.md  04-nonces-and-api-wallets.md  05-info-endpoint.md  06-exchange-endpoint.md  07-websocket.md  08-error-responses.md  09-signing.md  10-rate-limits.md  11-activation-gas-fee.md  12-optimizing-latency.md  13-bridge2.md  14-deploying-hip-assets.md  15-hip-3-deployer-actions.md  INDEX.md
docs/hyperliquid_docs/: CLAUDE_MD_SNIPPET.md  SETUP_GUIDE.md  scrape_hl_docs.py
docs/templates/: CLAUDE_TEMPLATE.md  CURRENT_SPRINT_TEMPLATE.md  KNOWN_ISSUES_TEMPLATE.md  PROJECT_SETUP.md
docs/templates/agents/: code-reviewer.md  domain-expert.md
docs/templates/hooks/: HOOKS_TEMPLATE.jsonc  check-file-size.sh  check-scope.sh  inject-critical-rules.sh  session-check.sh
docs/templates/rules/: agent-behavior.md  feedback-loop.md  file-size-limits.md  scope-guardrails.md  testing-protocol.md
docs/xyz/: 00-architecture.md  01-perp-overview.md  02-oracle-price.md  03-mark-price.md  04-external-price.md  05-funding.md  06-fees.md  07-commodities.md  08-equity-indices.md  09-stocks.md  10-fx.md  11-specification-index.md  12-holiday-closures.md  13-roll-schedules.md  14-margin-modes.md  15-liquidation-mechanics.md  16-auto-deleveraging.md  17-oracle-time-constant.md  18-funding-rate-update.md  INDEX.md
docs/zorro_docs/: index.md
docs/zorro_docs/Brokers_&_Data_Feeds/: ally.md  alpaca.md  binance.md  binancefutures.md  bitfinex.md  bittrex.md  brokerarb.md  brokerplugin.md  brokers.md  coinigy.md  credits.md  deribit.md  dukascopy.md  finvasia.md  fix.md  format.md  fxcm.md  gdax.md  ib.md  iex.md  ig.md  index.md  iqfeed.md  kraken.md  links.md  mt4plugin.md  nxcore.md  oanda.md  restrictions.md  rithmic.md  saxo.md  tdamtrade.md  tips.md  tradestation.md  tradier.md  vps.md  xtb.md
docs/zorro_docs/Functions/: abs.md  account.md  advisor.md  algo.md  algovar.md  asset.md  assetmode.md  assetzone.md  avar-asin.md  avar-exp.md  avar-log.md  avar-pow.md  avar-sin.md  avar-sinh.md  avar-sqrt.md  balance.md  bar.md  barmode.md  barperiod.md  between.md  brokercommand.md  button.md  buylong.md  call.md  candle.md  ccy.md  cdf.md  cfilter.md  clamp.md  cmd.md  color.md  colors.md  combo.md  contract.md  contractcpd.md  contracts.md  cot.md  crossover.md  data.md  dataslope.md  (+118 more)
docs/zorro_docs/Main_Topics/: account.md  bars.md  chart.md  command.md  conversion.md  deeplearning.md  dlls.md  engine.md  hedge.md  history.md  import.md  index.md  ini.md  log.md  montecarlo.md  npp.md  optimalf.md  performance.md  python.md  rbridge.md  retraining.md  scripts.md  shell.md  started.md  strategy.md  symbol.md  testing.md  trademode.md  trading.md  training.md
docs/zorro_docs/R_Lectures,_1-7/: Lecture_1.md  Lecture_2.md  Lecture_3.md  Lecture_4.md  Lecture_5.md  Lecture_6.md  (+5 more)
scripts/: install_hooks.bat  pre-commit
src/api/: hl_broker.cpp  hl_broker_commands.cpp  hl_broker_internal.h  hl_broker_market.cpp  hl_broker_trade.cpp
src/foundation/: hl_config.h  hl_crypto.cpp  hl_crypto.h  hl_eip712.cpp  hl_eip712.h  hl_globals.cpp  hl_globals.h  hl_msgpack.cpp  hl_msgpack.h  hl_types.h  hl_utils.cpp  hl_utils.h
src/services/: hl_account_service.cpp  hl_account_service.h  hl_market_service.cpp  hl_market_service.h  hl_meta.cpp  hl_meta.h  hl_meta_spot.cpp  hl_trading_bracket.cpp  hl_trading_bracket.h  hl_trading_cancel.cpp  hl_trading_modify.cpp  hl_trading_modify.h  hl_trading_service.cpp  hl_trading_service.h  hl_trading_twap.cpp  hl_trading_twap.h
src/transport/: hl_http.cpp  hl_http.h  json_helpers.h  ws_connection.cpp  ws_connection.h  ws_manager.cpp  ws_manager.h  ws_parsers.cpp  ws_parsers.h  ws_price_cache.cpp  ws_price_cache.h  ws_types.h
tests/: compile_account_service_http_test.bat  compile_account_service_test.bat  compile_account_service_ws_test.bat  compile_batch_modify_test.bat  compile_bracket_order_test.bat  compile_broker_asset_test.bat  compile_crypto_test.bat  compile_eip712_source_test.bat  compile_get_position_after_fill_test.bat  compile_get_price_context_test.bat  compile_globals_test.bat  compile_http_test.bat  compile_imported_test.bat  compile_lotsize_divzero_test.bat  compile_market_service_http_test.bat  compile_market_service_test.bat  compile_market_service_ws_test.bat  compile_meta_szdecimals_test.bat  compile_meta_test.bat  compile_partial_fill_test.bat  compile_perpdex_prefix_test.bat  compile_perpdex_separator_test.bat  compile_position_parsing_test.bat  compile_schedule_cancel_test.bat  compile_spot_asset_test.bat  compile_spot_perpdex_lookup_test.bat  compile_test.bat  compile_test_transport.cpp  compile_trading_service_test.bat  compile_trigger_order_test.bat  compile_twap_test.bat  compile_utils_test.bat  compile_ws_modules.bat  compile_ws_parsers_test.bat  compile_ws_price_cache_test.bat  compile_ws_test.bat  parse_meta.py  run_unit_tests.bat  test_candle_api.py  test_candle_api2.py  (+14 more)
tests/mocks/: mock_http.h  mock_zorro.h
tests/unit/: test_account_service.cpp  test_account_service_http.cpp  test_account_service_ws.cpp  test_batch_modify.cpp  test_bracket_order.cpp  test_broker_asset.cpp  test_eip712_source.cpp  test_get_position_after_fill.cpp  test_get_price_context.cpp  test_imported_trades.cpp  test_lotsize_divzero.cpp  test_market_service.cpp  test_market_service_http.cpp  test_market_service_ws.cpp  test_meta_szdecimals.cpp  test_partial_fill.cpp  test_perpdex_prefix.cpp  test_perpdex_separator.cpp  test_position_parsing.cpp  test_schedule_cancel.cpp  test_spot_asset.cpp  test_spot_perpdex_lookup.cpp  test_trading_service.cpp  test_trigger_order.cpp  test_twap.cpp  test_ws_parsers.cpp
(+36 files in other folders)
